Bug 267704 - Application: (systemsettings), signal: Aborted (multimedia)
Summary: Application: (systemsettings), signal: Aborted (multimedia)
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_phonon (other bugs)
Version First Reported In: 1.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
: 268564 274125 276929 278071 279100 280402 285148 289942 293368 313161 315152 320492 323756 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-05 13:47 UTC by omega
Modified: 2014-04-08 22:03 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.40 KB, text/plain)
2011-03-12 14:40 UTC, Unknown
Details
New crash information added by DrKonqi (4.74 KB, text/plain)
2012-01-31 00:25 UTC, Kerry N
Details
New crash information added by DrKonqi (6.88 KB, text/plain)
2012-04-05 06:20 UTC, bramic85
Details
New crash information added by DrKonqi (6.17 KB, text/plain)
2014-04-08 22:03 UTC, Bharat Gourab Das
Details

Note You need to log in before you can comment on or make changes to this bug.
Description omega 2011-03-05 13:47:22 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.6.1 (4.6.1)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-5-generic x86_64
Distribution: Ubuntu Natty (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

systemsettings crashed when i try to change phonon backend in multimedia section

The crash can be reproduced some of the time.

-- Backtrace:
Application: Impostazioni di sistema (systemsettings), signal: Aborted
[Current thread is 1 (Thread 0x7f8714c9a780 (LWP 9166))]

Thread 3 (Thread 0x7f86feb09700 (LWP 9167)):
#0  0x00007f87121bc003 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f870ff39180 in g_main_context_poll (context=0x22cc0e0, block=<value optimized out>, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3404
#2  g_main_context_iterate (context=0x22cc0e0, block=<value optimized out>, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3086
#3  0x00007f870ff396a9 in g_main_context_iteration (context=0x22cc0e0, may_block=1) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3154
#4  0x00007f8712915486 in QEventDispatcherGlib::processEvents (this=0x22cbf20, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f87128e9852 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f87128e9a8c in QEventLoop::exec (this=0x7f86feb08dd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f8712800904 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#8  0x00007f87128cbbdf in QInotifyFileSystemWatcherEngine::run (this=0x22caf20) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f8712803155 in QThreadPrivate::start (arg=0x22caf20) at thread/qthread_unix.cpp:320
#10 0x00007f8710404d8c in start_thread (arg=0x7f86feb09700) at pthread_create.c:304
#11 0x00007f87121c917d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f86bcd08700 (LWP 9176)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f86f9b959e0 in LoopRequest (data=0x287ed00) at playlist/thread.c:539
#2  Thread (data=0x287ed00) at playlist/thread.c:586
#3  0x00007f8710404d8c in start_thread (arg=0x7f86bcd08700) at pthread_create.c:304
#4  0x00007f87121c917d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f8714c9a780 (LWP 9166)):
[KCrash Handler]
#6  0x00007f8712116e25 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f871211abe6 in abort () at abort.c:92
#8  0x00007f8702665dd6 in pa_context_set_card_profile_by_index () from /usr/lib/libpulse.so.0
#9  0x00007f86faaeaaeb in SpeakerSetup::profileChanged (this=0x28b0b70) at ../../../phonon/kcm/speakersetup.cpp:519
#10 0x00007f86faaed49c in SpeakerSetup::qt_metacall (this=0x28b0b70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>) at ./speakersetup.moc:84
#11 0x00007f87128ff5e8 in QMetaObject::activate (sender=0x28b8890, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff6d5fafb0) at kernel/qobject.cpp:3287
#12 0x00007f87138f94e1 in QComboBox::currentIndexChanged (this=<value optimized out>, _t1=3) at .moc/release-shared/moc_qcombobox.cpp:302
#13 0x00007f87138f9547 in QComboBoxPrivate::_q_emitCurrentIndexChanged (this=0x281b480, index=...) at widgets/qcombobox.cpp:1264
#14 0x00007f87138f969a in QComboBoxPrivate::setCurrentIndex (this=0x281b480, mi=<value optimized out>) at widgets/qcombobox.cpp:2022
#15 0x00007f87138fa2d4 in QComboBoxPrivate::_q_itemSelected (this=0x281b480, item=...) at widgets/qcombobox.cpp:1233
#16 0x00007f87138fd787 in QComboBox::qt_metacall (this=0x28b8890, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0x7fff6d5fb190) at .moc/release-shared/moc_qcombobox.cpp:191
#17 0x00007f87128ff5e8 in QMetaObject::activate (sender=0x2853d10, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff6d5fb190) at kernel/qobject.cpp:3287
#18 0x00007f8713b97482 in QComboBoxPrivateContainer::itemSelected (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qcombobox_p.cpp:213
#19 0x00007f87138f4a21 in QComboBoxPrivateContainer::eventFilter (this=0x2853d10, o=0x280ad20, e=0x7fff6d5fba00) at widgets/qcombobox.cpp:687
#20 0x00007f87128ea5f7 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x280ad20, event=0x7fff6d5fba00) at kernel/qcoreapplication.cpp:846
#21 0x00007f87135209b1 in QApplicationPrivate::notify_helper (this=0x1cfd9f0, receiver=0x280ad20, e=0x7fff6d5fba00) at kernel/qapplication.cpp:4458
#22 0x00007f8713525db3 in QApplication::notify (this=<value optimized out>, receiver=0x280ad20, e=0x7fff6d5fba00) at kernel/qapplication.cpp:4023
#23 0x00007f871423f966 in KApplication::notify (this=0x7fff6d5fc6c0, receiver=0x280ad20, event=0x7fff6d5fba00) at ../../kdeui/kernel/kapplication.cpp:311
#24 0x00007f87128ea46c in QCoreApplication::notifyInternal (this=0x7fff6d5fc6c0, receiver=0x280ad20, event=0x7fff6d5fba00) at kernel/qcoreapplication.cpp:731
#25 0x00007f8713521a0d in sendEvent (receiver=0x280ad20, event=0x7fff6d5fba00, alienWidget=0x280ad20, nativeWidget=0x2853d10, buttonDown=0x7f8714001218, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#26 QApplicationPrivate::sendMouseEvent (receiver=0x280ad20, event=0x7fff6d5fba00, alienWidget=0x280ad20, nativeWidget=0x2853d10, buttonDown=0x7f8714001218, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#27 0x00007f87135a1814 in QETWidget::translateMouseEvent (this=0x2853d10, event=<value optimized out>) at kernel/qapplication_x11.cpp:4490
#28 0x00007f87135a000a in QApplication::x11ProcessEvent (this=0x7fff6d5fc6c0, event=0x7fff6d5fc350) at kernel/qapplication_x11.cpp:3678
#29 0x00007f87135c80e2 in x11EventSourceDispatch (s=0x1cf51d0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007f870ff38c2d in g_main_dispatch (context=0x1cf4080) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:2440
#31 g_main_context_dispatch (context=0x1cf4080) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3013
#32 0x00007f870ff39418 in g_main_context_iterate (context=0x1cf4080, block=<value optimized out>, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3091
#33 0x00007f870ff396a9 in g_main_context_iteration (context=0x1cf4080, may_block=1) at /build/buildd/glib2.0-2.28.1/./glib/gmain.c:3154
#34 0x00007f871291542f in QEventDispatcherGlib::processEvents (this=0x1cbf490, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007f87135c7d7e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007f87128e9852 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007f87128e9a8c in QEventLoop::exec (this=0x7fff6d5fc650, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007f87128ede9b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#39 0x0000000000411626 in main (argc=5, argv=<value optimized out>) at ../../../systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Unknown 2011-03-12 14:40:13 UTC
Created attachment 57900 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.2

Open System Settings, then go to Multimedia > Phonon > Speaker settings > change the hardware profile from Analog stereo duplex to Analog stereo output.

Second time it somehow works for me.

-- Backtrace (Reduced):
#8  0x00007f763eb61f76 in pa_context_set_card_profile_by_index (c=0x0, idx=0, profile=0xce9938 "output:analog-stereo", cb=0, userdata=0x0) at pulse/introspect.c:848
#9  0x00007f763a6ea970 in SpeakerSetup::profileChanged (this=0xcd5950) at /usr/src/debug/kdebase-runtime-4.6.1/phonon/kcm/speakersetup.cpp:519
#10 0x00007f763a6ed76c in SpeakerSetup::qt_metacall (this=0xcd5950, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>) at /usr/src/debug/kdebase-runtime-4.6.1/build/phonon/kcm/speakersetup.moc:84
[...]
#12 0x00007f764fc3cd51 in QComboBox::currentIndexChanged (this=<value optimized out>, _t1=1) at .moc/release-shared/moc_qcombobox.cpp:302
#13 0x00007f764fc3cdbc in QComboBoxPrivate::_q_emitCurrentIndexChanged (this=<value optimized out>, index=...) at widgets/qcombobox.cpp:1264
Comment 2 Christoph Feck 2011-07-02 12:26:36 UTC
*** Bug 276929 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2011-07-02 12:26:47 UTC
*** Bug 268564 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2011-07-19 11:10:40 UTC
*** Bug 278071 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2011-08-20 09:26:11 UTC
*** Bug 280402 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-10-28 09:38:00 UTC
*** Bug 285148 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2011-10-28 09:38:18 UTC
*** Bug 279100 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-12-27 20:59:14 UTC
*** Bug 289942 has been marked as a duplicate of this bug. ***
Comment 9 Kerry N 2012-01-31 00:25:56 UTC
Created attachment 68356 [details]
New crash information added by DrKonqi

kcmshell4 () on KDE Platform 4.7.4 (4.7.4) using Qt 4.8.0

- What I was doing when the application crashed:

Changing the settings on sound setup screen.

-- Backtrace (Reduced):
#8  0x4791298f in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#9  0x479142d5 in __GI_abort () at abort.c:91
#10 0xb5bd698a in pa_context_set_card_profile_by_index (c=0x0, idx=0, profile=0x9e472d8 "input:analog-stereo", cb=0, userdata=0x0) at pulse/introspect.c:847
#11 0xb5cd260e in AudioSetup::profileChanged (this=0xa109528) at /usr/src/debug/kde-runtime-4.7.4/phonon/kcm/audiosetup.cpp:659
#12 0xb5cd648d in AudioSetup::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at /usr/src/debug/kde-runtime-4.7.4/i686-redhat-linux-gnu/phonon/kcm/audiosetup.moc:63
Comment 10 Christoph Feck 2012-02-10 18:30:53 UTC
*** Bug 293368 has been marked as a duplicate of this bug. ***
Comment 11 bramic85 2012-04-05 06:20:57 UTC
Created attachment 70165 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

tried to change the sound output to HDMI in the phones section

-- Backtrace (Reduced):
#6  0x00007f204d82e3a5 in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f204d831b0b in __GI_abort () at abort.c:92
#8  0x00007f203d24fd86 in pa_context_set_card_profile_by_index () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#9  0x00007f2032a74dc4 in AudioSetup::profileChanged (this=0x18caaf0) at ../../../phonon/kcm/audiosetup.cpp:609
#10 0x00007f2032a76acd in AudioSetup::qt_metacall (this=0x18caaf0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=<optimized out>) at ./audiosetup.moc:86
Comment 12 Christoph Feck 2013-01-13 03:23:24 UTC
*** Bug 313161 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2013-02-14 19:31:37 UTC
*** Bug 315152 has been marked as a duplicate of this bug. ***
Comment 14 Jekyll Wu 2013-05-31 01:05:24 UTC
*** Bug 320492 has been marked as a duplicate of this bug. ***
Comment 15 David Mischel 2013-06-03 23:13:49 UTC
I modified /etc/bluetooth/audio.conf and removed "Socket" from the line in General:
Enable=Gateway,Source

I am not certain but this seemed to fix the problem. The setting now sticks.
Comment 16 Jekyll Wu 2013-08-20 06:19:25 UTC
*** Bug 323756 has been marked as a duplicate of this bug. ***
Comment 17 Harald Sitter 2013-10-26 13:42:20 UTC
If someone can reproduce this. Please run `kdebugdialog` and activate all debug output, then in a terminal run

`kcmshell4 phonon &> ~/kcmphonon.log`

and try to trigger the crash. Afterwards a file called kcmphonon.log will be in your home, please attach it to the bug report. Then you can deactivate debug output in kdebugdialog again.


Dev Note:
s_context is null which may be because PA crashed and we don't support reconnection or because init failed (and from a quick glance it does not seem like AudioSetup is protecting at this case actively though supposedly you should have no profile/card/etc to select in that case).
Comment 18 Harald Sitter 2013-10-26 14:14:15 UTC
Git commit 866fb7334c3a011eb81cfd5492d8976d119f1a6e by Harald Sitter.
Committed on 26/10/2013 at 14:13.
Pushed by sitter into branch 'KDE/4.11'.

Prevent KCM crash after a context goes bad

If AudioSetup cannot connect to the context at construction the entire tab
will simply not be added, so the KCM cannot crash on nullptr access in
that case. However when a context goes bad after initial connection the KCM
did not try to reconnect which pretty much ensures a crash on s_context=0.

Connection logic was refactored into af function and used to attempt a
reconnect. Additionally when failing to connect to the context the widget
is now disabled, so even if the reconnect fails the user can not crash
AudioSetup (also without a context the widget is useless).
FIXED-IN: 4.11.3

M  +26   -20   phonon/kcm/audiosetup.cpp
M  +1    -0    phonon/kcm/audiosetup.h

http://commits.kde.org/kde-runtime/866fb7334c3a011eb81cfd5492d8976d119f1a6e
Comment 19 Harald Sitter 2013-10-26 14:18:31 UTC
*** Bug 274125 has been marked as a duplicate of this bug. ***
Comment 20 Bharat Gourab Das 2014-04-08 22:03:05 UTC
Created attachment 86006 [details]
New crash information added by DrKonqi

kcmshell4 () on KDE Platform 4.8.5 (4.8.5) using Qt 4.8.1

- What I was doing when the application crashed:
1-Changed audio profile in audio hardware in Phonon
2-Crashed everytime I changed the profile to and fro HDMI-analog audio

-- Backtrace (Reduced):
#6  0x00007f9caa87f425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f9caa882b8b in __GI_abort () at abort.c:91
#8  0x00007f9c99c77096 in pa_context_set_card_profile_by_index () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
[...]
#11 0x00007f9ca8c5e4a1 in QComboBox::currentIndexChanged (this=<optimized out>, _t1=2) at .moc/release-shared/moc_qcombobox.cpp:316
#12 0x00007f9ca8c5e507 in QComboBoxPrivate::_q_emitCurrentIndexChanged (this=<optimized out>, index=...) at widgets/qcombobox.cpp:1278